--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <input type="number" name="replenishment-amount" min="1000" max="3000000" class="field__input-field">
                 </div>
                 <div class="calculator__field calculator__field_result-field">
-                    <input type="submit" value="Рассчитать" class="calculator__button">
+                    <button type="submit" class="calculator__button">Рассчитать</button>
                     <p class="calculator__result-name">Результат:</p>
                     <div class="calculator__result">10 000 руб</div>
                 </div>
