--- a/index.html
+++ b/index.html
@@ -7,8 +7,21 @@
     <title>World Bank Publications</title>
     <meta name="author" content="Chepukhin Sergey">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <!--Add stylesheets-->
     <link rel="stylesheet" type="text/css" href="styles.css">
+
+    <!-- Add JQuery Datepicker -->
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="/resources/demos/style.css">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script>
+    $( function() {
+      $( "#datepicker" ).datepicker();
+    } );
+    </script>
+
 </head>
 <body>
     <header>
@@ -48,17 +61,19 @@
     <main class="container">
         <div class="calculator">
             <h2 class="calculator__header">Калькулятор</h2>
-            <form action="#" class="calculator__form" method="GET">
+            <form action="#" class="calculator__form"">
                 <!-- Date field -->
                 <div class="calculator__field">
                     <label class="field__fieldname" for="date">Дата оформления вклада</label>
-                    <input type="date" name="date" class="field__input-field">
+                    <!-- <input type="date" name="date" class="field__input-field"> -->
+                    <input type="text" id='datepicker'>
                 </div>
                 <!-- Deposite budget field -->
                 <div class="calculator__field">
                     <label class="field__fieldname" for="deposite">Сумма вклада</label>
-                    <input type="number" name="deposite" min="1000" max="3000000" class="field__input-field">
-                    <input type="range" name="deposite-range" class="field__range-field">
+                    <!-- Fix crutch!!! -->
+                    <div class="field__input-field deposite-range_result-area">10 000</div>
+                    <input type="range" name="deposite-range"  min="1000" max="3000000" value='10000' class="field__range-field deposite-range_result-value">
                 </div>
                 <!-- Deposite term field -->
                 <div class="calculator__field">
@@ -82,13 +97,14 @@
                 <!-- Deposit replenishment amount field -->
                 <div class="calculator__field">
                     <label class="field__fieldname" for="replenishment-amount">Сумма пополнения вклада</label>
-                    <input type="number" name="repl " min="1000" max="3000000" class="field__input-field">
-                    <input type="range" name="deposite-range" class="field__range-field ">
+                    <!-- Fix crutch!!! -->
+                    <div class="field__input-field replenishment-amount_result-area">10 000</div>
+                    <!-- <input type="number" name="replenishment-amount" lang="en-150" class="replenishment-amount_result-area"> -->
+                    <input type="range" name="replenishment-amount"  min="1000" max="3000000" value='10000' class="field__range-field replenishment-amount_result-value">
                 </div>
                 <div class="calculator__field calculator__field_result-field">
-                    <button type="submit" class="calculator__button">Рассчитать</button>
-                    <p class="calculator__result-name">Результат:</p>
-                    <div class="calculator__result">10 000 руб</div>
+                    <button type="submit" class="calculator__button" >Рассчитать</button>
+                    <p class="calculator__result-name">Результат: <span class="calculator__result">10 000 руб</span></p>
                 </div>
             </form>
         </div>
