--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <!--Meta information-->
@@ -10,20 +11,24 @@
 
     <!--Add stylesheets-->
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <!-- Add calculator function -->
+
     <!--Add JQuery -->
     <script type="text/javascript" src="/jquery.js"></script>
-    <script type="text/javascript" src="/calc.js"></script>
     <!-- Add JQuery Datepicker -->
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="/resources/demos/style.css">
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script>
-    $( function() {
-      $( "#datepicker" ).datepicker();
-    } );
+        $(function () {
+            $("#datepicker").datepicker({
+                dateFormat: "d.m.y"
+            });
+        });
     </script>
 
 </head>
+
 <body>
     <header>
         <div class="menu-header container">
@@ -62,19 +67,20 @@
     <main class="container">
         <div class="calculator">
             <h2 class="calculator__header">Калькулятор</h2>
-            <form action="/calc.php" method="post" class="calculator__form">
+            <form action="" method="POST" class="calculator__form">
                 <!-- Date field -->
                 <div class="calculator__field">
                     <label class="field__fieldname" for="date">Дата оформления вклада</label>
                     <!-- <input type="date" name="date" class="field__input-field"> -->
-                    <input type="text" name="date" id='datepicker'>
+                    <input type="text" name="date" id='datepicker' class="field__input-field field__date-field">
                 </div>
                 <!-- Deposite budget field -->
                 <div class="calculator__field">
                     <label class="field__fieldname" for="deposite">Сумма вклада</label>
                     <!-- Fix crutch!!! -->
                     <div class="field__input-field deposite-range_result-area">10 000</div>
-                    <input type="range" name="deposite-range"  min="1000" max="3000000" value='10000' class="field__range-field deposite-range_result-value">
+                    <input type="range" name="deposite-range" min="1000" max="3000000" value='10000'
+                        class="field__range-field deposite-range_result-value">
                 </div>
                 <!-- Deposite term field -->
                 <div class="calculator__field">
@@ -101,11 +107,12 @@
                     <!-- Fix crutch!!! -->
                     <div class="field__input-field replenishment-amount_result-area">10 000</div>
                     <!-- <input type="number" name="replenishment-amount" lang="en-150" class="replenishment-amount_result-area"> -->
-                    <input type="range" name="replenishment-amount"  min="1000" max="3000000" value='10000' class="field__range-field replenishment-amount_result-value">
+                    <input type="range" name="replenishment-amount" min="1000" max="3000000" value='10000'
+                        class="field__range-field replenishment-amount_result-value">
                 </div>
                 <div class="calculator__field calculator__field_result-field">
-                    <input type="submit" class="calculator__button" value="Рассчитать">
-                    <p class="calculator__result-name">Результат: <span class="calculator__result">10 000 руб</span></p>
+                    <input type="submit" value="Рассчитать" class="calculator__button">
+                    <p class="calculator__result-name">Результат: <span class="calculator__result"></span></p>
                 </div>
             </form>
         </div>
@@ -125,8 +132,26 @@
             </div>
         </nav>
     </footer>
-    <!-- Add JQuery AJAX listener -->
-
+    <!-- Add JQuery AJAX request function -->
+    <script>
+        $(function () {
+            $('form').submit(function (e) {
+                var $form = $(this);
+                $.ajax({
+                    type: $form.attr('method'),
+                    url: $form.attr('action'),
+                    data: $form.serialize()
+                }).done(function () {
+                    console.log('success');
+                }).fail(function () {
+                    console.log('fail');
+                });
+                e.preventDefault();
+            });
+        });
+    </script>
+    <div id="datepicker2"></div>
 </body>
 <script src="script.js"></script>
+<script src="calc.js"></script>
 </html>
