fix JQuery rel style error

--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
 
     <!--Add stylesheets-->
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <!-- Add calculator function -->
-
     <!--Add JQuery -->
     <script type="text/javascript" src="/jquery.js"></script>
     <!-- Add JQuery Datepicker -->
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="/resources/demos/style.css">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script>
         $(function () {
